Ajout d'un loader avant de charger la page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
             href="https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@200;300;400;500&family=Roboto+Mono:wght@100;200;300;400;500;600;700&display=swap"
             rel="stylesheet"
         />
+        <link rel="shortcut icon" href="/Icon-Sagby.ico" type="image/x-icon">
         <title>Sagby - Portfolio</title>
     </head>
     <body>
