--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,17 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@200;300;400;500&family=Roboto+Mono:wght@100;200;300;400;500;600;700&display=swap"
-            rel="stylesheet"
-        />
-        <link rel="shortcut icon" href="/Icon-Sagby.ico" type="image/x-icon">
-        <title>Sagby - Portfolio</title>
-    </head>
-    <body>
-        <div id="root"></div>
-        <script type="module" src="/src/main.jsx"></script>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;300;400;500;600;700;800;900&amp;family=Poppins:wght@200;300;400;500&amp;family=Roboto+Mono:wght@100;200;300;400;500;600;700&amp;display=swap"
+      rel="stylesheet"
+    />
+    <link rel="shortcut icon" href="/Icon-Sagby.ico" type="image/x-icon" />
+    <title>Sagby - Portfolio</title>
+    <script id="react-dotenv" src="./env.js"></script>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
